<resources>
    <string name="app_name">Shopping Cart</string>
    <string name="add_an_item">Add an Item</string>
    <string name="sort_by">Sort By:</string>
    <string name="button_add">ADD</string>
    <string name="sort_name">Name</string>
    <string name="button_delete_all">Delete All</string>
    <string name="button_share_list">Share List</string>
    <string name="label_item_list">Item List</string>
    <string name="sort_quantity">Quantity</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_item_name">Item Name:</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_header">Settings</string>
    <string name="greeting_title">Change Greeting Name</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>