<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/label1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:text="@string/add_an_item"
            android:textSize="18sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Item_Name_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_item_name"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/Name_Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:ems="7"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="12sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/Quantity_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/label_quantity"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/Quantity_Input"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:autofillHints=""
                android:ems="2"
                android:inputType="number"
                android:textSize="12sp" />

            <Button
                android:id="@+id/ADD_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/button_add"
                android:textSize="12sp"
                app:backgroundTint="#E1A5F0"
                app:cornerRadius="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="start|center_horizontal">

            <TextView
                android:id="@+id/label2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/sort_by"
                android:textSize="18sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/Name_Sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/sort_name"
                android:textSize="12sp"
                app:backgroundTint="#E1A5F0"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/Quantity_Sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/sort_quantity"
                android:textSize="12sp"
                app:backgroundTint="#E1A5F0"
                app:cornerRadius="15dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/label3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_item_list"
            android:textSize="18sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Share_List_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_share_list"
                android:textSize="12sp"
                app:backgroundTint="#E1A5F0"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/Delete_All_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="145dp"
                android:layout_marginLeft="145dp"
                android:text="@string/button_delete_all"
                android:textSize="12sp"
                app:backgroundTint="#E1A5F0"
                app:cornerRadius="15dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>